# cast

./: .gitignore  CMakeLists.txt  README.md  main.c
include/cast/: functions.h  operation.h  parser.h  token.h  tokenizer.h  util.h  variables.h
src/: functions.c  operation.c  parser.c  token.c  tokenizer.c  util.c  variables.c
tests/: test_bulk.c  test_bulk.h  test_functions.c  test_functions.h  test_parse.c  test_parse.h  test_stress.c  test_stress.h  test_tokenize.c  test_tokenize.h  test_tokens.c  test_tokens.h  test_util.c  test_util.h  test_variables.c  test_variables.h
